<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_limit">Access restrictions</string>
    <string name="access_tips">"Can't access items. Try using Android Storage Access Framework instead."</string>
    <string name="action_cache_to_local">Download to device</string>
    <string name="action_mode_deselect_all">Deselect all</string>
    <string name="action_mode_select_all">Select all</string>
    <string name="action_release_file_cache">Clear cache</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="ad_download">Download</string>
    <string name="add_one">(1)</string>
    <string name="add_private">Make files private</string>
    <string name="add_private_files">Add files</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="added_category">Added</string>
    <string name="afternoon">Afternoon</string>
    <string name="aggree_desc">Allow this app to connect to the internet and grant the mandatory permissions listed above.</string>
    <string name="agree">Agree</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="aosp_appbar_scrolling_view_behavior">com.android.fileexplorer.view.aosp.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="app_all_purpose">Welcome to File Manager! You can use this app to manage the files stored on your device.</string>
    <string name="app_all_purpose_global">Welcome to File Manager! You can use this app to preview and manage files stored on your device.</string>
    <string name="app_all_purpose_pad">Welcome to File Manager! You can use this app to manage the files stored on your device.</string>
    <string name="app_function">Manage files on your device</string>
    <string name="app_name">File Manager</string>
    <string name="app_name_bluetooth">Bluetooth</string>
    <string name="app_name_camera">Camera</string>
    <string name="app_name_downloadedrom">Packages</string>
    <string name="app_name_downloads">Downloads</string>
    <string name="app_name_market">App Store</string>
    <string name="app_name_miui">System resources</string>
    <string name="app_name_miuimusic">Music</string>
    <string name="app_name_miuiringtone">Ringtone</string>
    <string name="app_name_miuiwallpaper">Wallpapers</string>
    <string name="app_name_recorder">Recorder</string>
    <string name="app_name_screenshot">Screenshots</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="available_size">Available: %s</string>
    <string name="big5_summary">Traditional Chinese Windows default encoding</string>
    <string name="big5_title">BIG5</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="by_date">Time modified</string>
    <string name="by_name">Name</string>
    <string name="by_size">Size</string>
    <string name="by_type">Type</string>
    <string name="byteShort">B</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="can_not_send_with_too_many">"Can't send that many items at once"</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_error">"Couldn't remove. Try again."</string>
    <string name="cancel_mi_drive">Cancel Mi Drive services</string>
    <string name="cancel_mi_drive_alert_description" formatted="false">Clear all items from Mi Drive to be able to cancel services. Follow these steps to clear items:&lt;br />&lt;xliff:g id=cancel_mi_drive_alert_description_list_1 refersto=1>%1d&lt;/xliff:g>. On the Mi Drive start page, press and hold an item to make the \"Select all\" button appear. Use this button to select up to 200 files at a time and delete them.&lt;br />&lt;xliff:g id=cancel_mi_drive_alert_description_list_2 refersto=2>%2d&lt;/xliff:g>. After this, clear your recently deleted items.</string>
    <string name="cancel_mi_drive_alert_reminder_card_summary" formatted="false">"&lt;xliff:g id=cancel_mi_drive_alert_reminder_card_summary_list_1 refersto=1>%1d&lt;/xliff:g>. We recommend backing up your items before deleting them. To do so, visit i.mi.com, click Mi Drive, and download your items to a computer.&lt;br />&lt;xliff:g id=cancel_mi_drive_alert_reminder_card_summary_list_2 refersto=2>%2d&lt;/xliff:g>. Please note that recently deleted items can't be recovered after you delete them."</string>
    <string name="cancel_mi_drive_confirm_button">Cancel services</string>
    <string name="cancel_mi_drive_confirm_description">"If you continue, you'll cancel Mi Drive services. We will cease to collect your personal information, and the personal information already collected and retained will be deleted within the specified period in accordance with applicable laws and regulations unless required otherwise."</string>
    <string name="cancel_mi_drive_confirm_hint">"Canceling Mi Drive services won't affect your use of other Xiaomi products and services. If you want to delete your Xiaomi Account, you can do that &lt;font color=#0097FF>&lt;a href=%1$s>here&lt;/a>&lt;/font>."</string>
    <string name="cancel_mi_drive_confirm_reminder_card_summary" formatted="false">&lt;font color=#F22424>The following items will be deleted permanently after cancellation of services:&lt;/font>&lt;br />&lt;xliff:g id=cancel_mi_drive_confirm_reminder_card_summary_list_1 refersto=1>%1d&lt;/xliff:g>. All items on Mi Drive, including but not limited to documents, private files, and deleted items.&lt;br />&lt;xliff:g id=cancel_mi_drive_confirm_reminder_card_summary_list_2 refersto=2>%2d&lt;/xliff:g>. Device permissions, settings, and other cached content.&lt;br />&lt;xliff:g id=cancel_mi_drive_confirm_reminder_card_summary_list_3 refersto=3>%3d&lt;/xliff:g>. Mi Drive upload and download history.</string>
    <string name="cancel_mi_drive_privacy_revoked_retry">Turn on Mi Drive and try again</string>
    <string name="cancel_mi_drive_success">Canceled services successfully</string>
    <string name="cancel_mi_drive_title">Cancel services</string>
    <string name="cancel_msg">Deselect all?</string>
    <string name="cancel_operation">Cancel operation</string>
    <string name="cancel_success">Moved files to %s successfully</string>
    <string name="cancelled_by_user">Operation canceled</string>
    <string name="cannot_send">"Can't send files from external storage"</string>
    <string name="category">Categories</string>
    <string name="category_all">All files</string>
    <string name="category_apk">APKs</string>
    <string name="category_bluetooth">Bluetooth</string>
    <string name="category_cloud_drive">Mi Drive</string>
    <string name="category_document">Docs</string>
    <string name="category_download">Downloads</string>
    <string name="category_editor_mode">Edit</string>
    <string name="category_exit_editor_mode">Exit</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_file">Files</string>
    <string name="category_files">Files</string>
    <string name="category_installed_app">Installed apps</string>
    <string name="category_midrive">Mi Drive</string>
    <string name="category_more">More</string>
    <string name="category_music">Music</string>
    <string name="category_other">Other</string>
    <string name="category_photo">Photos</string>
    <string name="category_picture">Images</string>
    <string name="category_qq">QQ</string>
    <string name="category_recent">Storage</string>
    <string name="category_source">Source</string>
    <string name="category_taobao">Taobao</string>
    <string name="category_theme">Themes</string>
    <string name="category_time">Time</string>
    <string name="category_type_document">Documents</string>
    <string name="category_type_meida">Media</string>
    <string name="confirm">OK</string>
    <string name="create_folder">Create</string>
    <string name="file_info_canread">Readable: </string>
    <string name="file_info_canwrite">Writable: </string>
    <string name="file_info_ishidden">Hidden: </string>
    <string name="file_info_location">Location: </string>
    <string name="file_info_modified">Last modified: </string>
    <string name="file_info_size">Size: </string>
    <string name="ftp_anonymous_login">Anonymous sign-in</string>
    <string name="ftp_port_number">Port number</string>
    <string name="ftp_transfer_secure">Security</string>
    <string name="ftp_username_and_passworld">Sign in</string>
    <string name="gbk_summary">Simplified Chinese Windows default encoding</string>
    <string name="gbk_title">GBK</string>
    <string name="go_ahead">Open</string>
    <string name="internal_storage">Internal storage</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_add_time">"Added to favorites "</string>
    <string name="menu_item_sort_date">Modification time</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="operation_refresh">Refresh</string>
    <string name="server_control_advanced_settings">Additional settings</string>
    <string name="server_control_charset">Transfer encoding</string>
    <string name="sort_size_asc">Smaller to bigger</string>
    <string name="sort_size_desc">Bigger to smaller</string>
    <string name="stay_awake_summary">"Don't let display sleep while using FTP"</string>
    <string name="stay_awake_title">Keep display awake</string>
    <string name="utf8_summary">System FTP default encoding</string>
    <string name="utf8_title">UTF-8</string>
</resources>